@@ -45,5 +45,9 @@ class TestDecode:
         self.assertEqual(rval, {"key":"value", "k":"v"})
 
 
+    def test_negative_index(self):
+        d = self.json.JSONDecoder()
+        self.assertRaises(ValueError, d.raw_decode, 'a'*42, -50000)
+
 class TestPyDecode(TestDecode, PyTest): pass
 class TestCDecode(TestDecode, CTest): pass
