@@ -842,6 +842,7 @@ Kannan Vijayan
 Kurt Vile
 Norman Vine
 Frank Visser
+Guido Vranken
 Niki W. Waibel
 Wojtek Walczak
 Charles Waldman
